# QT_unsplash_2_0

./: .gitignore  API_test  CMakeLists.txt  file_analyse.qrc  main.cpp  net_control.cpp  net_control.h  picture_info.cpp  picture_info.h  ui_control.cpp  ui_control.h  wallpaper_set_control.cpp  wallpaper_set_control.h
